# pytorch-pets-classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
configs/: cosine_earlystop.yaml  default.yaml
configs/experiments/: exp01_baseline_e15_s42.yaml  exp02_cosine_es_e30_s42.yaml  exp03_plateau_es_e30_s42.yaml  exp03b_plateau_noes_e30_s42.yaml  exp04_step_es_e30_s42.yaml  exp05_cosine_es_e30_s123.yaml  exp06_cosine_es_e30_s777.yaml  exp07_cosine_es_bs16_lr15e4_s42.yaml  exp08_cosine_es_bs64_lr6e4_s42.yaml  exp09_cosine_es_freeze2_s42.yaml  exp10_cosine_es_bs16_lr15e4_s123.yaml  exp11_cosine_es_bs16_lr15e4_s777.yaml  exp12_cosine_es_img224_s42.yaml  exp13_cosine_es_img256_s42.yaml  exp14_cosine_es_img320_s42.yaml  (+6 more)
deploy/: README.md  showcase_model.json
docs/experiments/: README.md  (+19 more)
scripts/: run_experiment.sh  seed_sweep_summary.py
src/: __init__.py  api.py  calibration.py  calibration_analysis.py  config.py  data.py  error_analysis.py  error_delta.py  eval.py  experiment_analytics.py  inference.py  log_run_artifacts.py  model.py  plot_error_analysis.py  plot_metrics.py  predict.py  tracking.py  train.py  utils.py
tests/: __init__.py  test_api.py  test_calibration.py  test_config_utils.py  test_data_transforms.py  test_error_analysis.py  test_error_delta.py  test_experiment_analytics.py  test_placeholder.py  test_plot_error_analysis.py  test_plot_metrics.py  test_predict.py  test_smoke.py  test_tracking.py  test_train_behavior.py
(+3 files in other folders)
